2011-10-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-entity-ids-spec.h,
	libfreeipmi/src/spec/ipmi-entity-ids-spec.c: Add new defines for
	non-standard entity ids to model sensor types code.

	* libfreeipmi/include/freeipmi/util/ipmi-entity-ids-util.h,
	libfreeipmi/src/util/ipmi-entity-ids-util.c: New file.

	* common/src/toolsensor/tool-sensor-common.c (get_entity_sensor_name_string):
	Use new library function.

	* ipmi-sel/src/ipmi-sel.c (_normal_output_sensor_name_and_type):
	Code cleanup, split function into _normal_output_sensor_name and
	_normal_output_sensor_type.  Update code accordingly.

        * libfreeipmi/src/fru-parse/,
        libfreeipmi/include/freeipmi/fru-parse/ipmi-fru-parse.h: Allow
        creation of FRU ctx with NULL ipmi_ctx.
	
2011-10-27  Albert Chu <chu11@llnl.gov>

	* Support new --sdr-cache-file option globally.
	
2011-10-27  Albert Chu <chu11@llnl.gov>

	* common/src/toolsdr/: Code cleanup, make internal functions static.
	
2011-10-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fru-parse/ipmi-fru-parse-data.c: Add forgotten headers.

	* ipmi-sel/: Code cleanup, do not pass unnecessary parameters to functions.
	
2011-10-24  Albert Chu <chu11@llnl.gov>

	* Update documentation with OEM support information.
	
2011-10-21  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/: Use unsigned int for cmd_length.

	* common/src/miscutil/conffile.c: Update to latest version.
	
2011-10-21  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Output GUID w/ lower case hex characters, as defined
	in Wired for Management spec.
	
2011-10-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, ipmi-sensors/: Remove unnecessary includes, add
	appropriate ones.

	* bmc-info/: Various code cleanup, use macros when appropriate.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c: Check for valid netfn request input.

	* libfreeipmi/src/api/: Check for valid netfn request input on raw functions.
	